Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 
-<p>'''
-$ About
-'''</p>
+<pre><code>$ About
+</code></pre>
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research</h3>
