Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,17 +34,29 @@
         <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span class="octicon octicon-link"></span></a>About</h3>
 
+<blockquote>
+<p>Excellent!</p>
+
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research</h3>
+
+<hr>
 
 <h3>
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h3>
 
+<hr>
+
 <h3>
 <a id="photos" class="anchor" href="#photos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Photos</h3>
 
+<hr>
+
 <h3>
 <a id="presentations" class="anchor" href="#presentations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Presentations</h3>
+
+<hr>
+</blockquote>
       </section>
     </div>
 
